Utilizamos la API para que muestre los datos de la DB

--- a/nodepop/views/vista.ejs
+++ b/nodepop/views/vista.ejs
@@ -3,12 +3,12 @@
 
 </head>
 <body>
-	<% users.forEach(function(user){ %>
-		Nombre<p><%= user.nombre %> "></p>
-		Venta<p><%= user.venta %> "></p>
-		Precio<p><%= user.precio %> "></p>
-		Foto<img src="<%= user.foto %>"></img>
-		Tags<p><%= user.tags %> "></p>
+	<% spots.forEach(function(spots){ %>
+		Nombre<p><%= spots.nombre %></p>
+		Venta<p><%= spots.venta %> "></p>
+		Precio<p><%= spots.precio %></p>
+		Foto<img src="<%= spots.foto %>"></img>
+		Tags<p><%= spots.tags %></p>
 		<% }) %>
 </body>
 </html>
